<resources>
    <string name="app_name">Ceol</string>
    <string name="label_settings_activity">Settings</string>

    <string name="action_settings">Settings</string>

    <!-- Preferences -->
    <!--<bool name="is_debug_mode">false</bool>-->
    <!--<string name="debug_device_server">10.0.2.2</string>-->
    <!--<string name="pref_baseurl_title">Ceol Base URL</string>-->
    <!--<bool name="use_telnet">false</bool>-->
    <!--<bool name="use_webservice">true</bool>-->
    <!--<integer name="web_status_repeat_rate_msecs">1900</integer>-->
    <!-- Monitor repeat rate -->
    <!--<integer name="end_rate_msecs">60000</integer>-->

    <string-array name="section_page_title">
        <item>Player</item>
        <item>Playlist</item>
        <item>Navigator</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Preferences General settings -->
    <string name="pref_header_general">General</string>

    <!-- Category Server settings -->
    <string name="pref_category_server">Server</string>

    <string name="pref_key_device_server">com.candkpeters.ceol.Device_Server</string>
    <string name="pref_title_device_server">CEOL IP address</string>
    <string name="pref_summary_device_server">The IP address of the CEOL server</string>
    <string name="pref_default_device_server">192.168.0.3</string>

    <string name="pref_key_wss_server">com.candkpeters.ceol.Wss_Server</string>
    <string name="pref_title_wss_server">CEOL WSS IP address</string>
    <string name="pref_summary_wss_server">The IP-address:port of the WSS server</string>
    <string name="pref_default_wss_server">192.168.0.4:1812</string>
    <!--<string name="pref_default_device_server">10.0.2.2</string>-->

    <string name="pref_default_openhome_name">Denon CEOL (OpenHome)</string>
    <string name="pref_summary_openhome_name">Name of OpenHome renderer device</string>
    <string name="pref_title_openhome_name">CEOL OpenHome name</string>
    <string name="pref_key_openhome_name">com.candkpeters.ceol.OpenHome_Name</string>

    <string name="pref_default_debug_openhome_name">Media Renderer (DESKTOP-OHHLAB3) (OpenHome)</string>
    <string name="pref_summary_debug_openhome_name">Name of debug OpenHome renderer device</string>
    <string name="pref_title_debug_openhome_name">Debug OpenHome name</string>
    <string name="pref_key_debug_openhome_name">com.candkpeters.ceol.Debug_OpenHome_Name</string>

    <string name="pref_default_contentsource_name">MinimServer[naspeters3]</string>
    <string name="pref_summary_contentsource_name">Name of DLNA Content Source</string>
    <string name="pref_title_contentsource_name">DLNA content source</string>
    <string name="pref_key_contentsource_name">com.candkpeters.ceol.ContentSource_Name</string>

    <!-- Category Macro settings -->
    <string name="pref_category_macro">Macros</string>
    <string name="pref_summary_macro">Enter macro commands</string>

    <string name="pref_key_macro1name">com.candkpeters.ceol.Macro1Name</string>
    <string name="pref_title_macro1name">Macro 1 Name</string>
    <string name="pref_key_macro1">com.candkpeters.ceol.Macro1</string>
    <string name="pref_title_macro1">Macro 1</string>

    <string name="pref_key_macro2name">com.candkpeters.ceol.Macro2Name</string>
    <string name="pref_title_macro2name">Macro 2 Name</string>
    <string name="pref_key_macro2">com.candkpeters.ceol.Macro2</string>
    <string name="pref_title_macro2">Macro 2</string>

    <string name="pref_key_macro3name">com.candkpeters.ceol.Macro3Name</string>
    <string name="pref_title_macro3name">Macro 3 Name</string>
    <string name="pref_key_macro3">com.candkpeters.ceol.Macro3</string>
    <string name="pref_title_macro3">Macro 3</string>

    <string name="pref_key_backgroundtimeoutsecs">com.candkpeters.ceol.Background_Timeout</string>
    <string name="pref_default_backgroundtimeoutsecs">30</string>
    <string name="pref_title_backgroundtimeoutsecs">Timeout before shutting down through inactivity (secs)</string>

    <string name="pref_key_backgroundratesecs">com.candkpeters.ceol.Background_Rate</string>
    <string name="pref_default_backgroundratesecs">60</string>
    <string name="pref_title_backgroundratesecs">Poll rate in background mode (secs)</string>

    <string name="pref_category_general">General</string>

    <!-- Preferences Debug settings -->
    <string name="pref_header_debug">Debug</string>

    <string name="pref_key_debug_mode">com.candkpeters.ceol.Is_Debug_Mode</string>
    <string name="pref_title_debug">Enable debug</string>
    <string name="pref_summary_debug">Connect to a test server</string>
    <bool name="pref_default_debug">false</bool>

    <string name="pref_key_debug_device_server">com.candkpeters.ceol.Debug_Device_Server</string>
    <string name="pref_title_debug_device_server">Debug server</string>
    <string name="pref_summary_debug_device_server">The IP address of another server when debugging is enabled</string>
    <string name="pref_default_debug_device_server">192.168.142.1</string>
    <string name="pref_default_macro1name">Random Pop 1</string>
    <string name="pref_default_macro2name">Macro 2</string>
    <string name="pref_default_macro3name">Macro 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="si_tuner">Tuner</string>
    <string name="si_netserver">Music Server</string>
    <string name="si_iradio">IRadio</string>
    <string name="si_usb">iPod / USB</string>
    <string name="si_bluetooth">Bluetooth</string>
    <string name="power_toggle">Power Toggle</string>
    <string name="volume_down">Volume down</string>
    <string name="not_connected">CEOL Controller\nTouch to start</string>
    <string name="not_connected_short">Not Connected</string>
    <string name="ceol_controller">CEOL Controller</string>
    <string name="si_analog">Analog In</string>
    <string name="si_cd">CD</string>
    <string name="si_digital1">Digital In 1</string>
    <string name="si_digital2">Digital In 2</string>
    <string name="macros">Macros</string>
    <string name="pref_default_macro1">CommandSetPower:true\nCommandSetSI:Music Server\nCommandBrowseToRoot\nCommandBrowseInto:naspeters2 FLAC\nBrowseInto:7 Playlists\nBrowseIntoAndPlay:Random Pop 1</string>
    <string name="pref_default_macro2" />
    <string name="pref_default_macro3" />
    <string name="artist_label">Artist:</string>
    <string name="album_label">Album:</string>
    <string name="track_label">Track:</string>
    <string name="format_label">Format:</string>
    <string name="lyrics_label">Lyrics:</string>
    <string name="search_for_lyrics">Search for lyrics</string>
    <string name="info_done">Done</string>
    <string name="i_button_text">i</string>

    <string name="volume_toast">Volume %1$s</string>
    <string name="menu_library">Library</string>
    <string name="action_refresh">Refresh</string>

    <string name="pref_key_openhome_enable">com.candkpeters.ceol.Openhome_Enable</string>
    <string name="pref_title_openhome_enable">Enable Openhome</string>
    <string name="pref_openhome_enable">Choose whether to enable Openhome</string>

    <string name="pref_key_foreground_enable">com.candkpeters.ceol.Foreground_Enable</string>
    <string name="pref_title_foreground_enable">Keep running in foreground</string>
    <string name="pref_foreground_enable">If set, the app will run in the foreground avoiding it being stopped after a while automatically by Android</string>
</resources>
