<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<!--
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:titleView="@string/pref_title_social_recommendations" />
-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory
        android:title="@string/pref_category_server"
        >
        <EditTextPreference
            android:defaultValue="@string/pref_default_device_server"
            android:inputType="textCapWords"
            android:key="@string/pref_key_device_server"
            android:summary="@string/pref_summary_device_server"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_device_server" />

        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="@string/pref_default_wss_server"
            android:inputType="textCapWords"
            android:key="@string/pref_key_wss_server"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_summary_wss_server"
            android:title="@string/pref_title_wss_server" />

        <CheckBoxPreference
            android:key="@string/pref_key_openhome_enable"
            android:title="@string/pref_title_openhome_enable"
            android:summary="@string/pref_openhome_enable"
            android:defaultValue="@bool/pref_default_openhome_enable"
            />

        <CheckBoxPreference
            android:key="@string/pref_key_foreground_enable"
            android:title="@string/pref_title_foreground_enable"
            android:summary="@string/pref_foreground_enable"
            android:defaultValue="@bool/pref_default_foreground_enable"
            />

        <EditTextPreference
            android:defaultValue="@string/pref_default_openhome_name"
            android:key="@string/pref_key_openhome_name"
            android:summary="@string/pref_summary_openhome_name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_openhome_name" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_macro"
        android:summary="@string/pref_summary_macro"
        >

        <EditTextPreference
            android:defaultValue="@string/pref_default_macro1name"
            android:inputType="textCapWords"
            android:key="@string/pref_key_macro1name"
            android:maxLines="5"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:title="@string/pref_title_macro1name" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_macro1"
            android:inputType="textMultiLine"
            android:key="@string/pref_key_macro1"
            android:maxLines="30"
            android:minLines="5"
            android:lines="8"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:title="@string/pref_title_macro1" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_macro2name"
            android:inputType="textCapWords"
            android:key="@string/pref_key_macro2name"
            android:maxLines="5"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:title="@string/pref_title_macro2name" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_macro2"
            android:inputType="textCapWords"
            android:key="@string/pref_key_macro2"
            android:maxLines="5"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:title="@string/pref_title_macro2" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_macro3name"
            android:inputType="textCapWords"
            android:key="@string/pref_key_macro3name"
            android:maxLines="5"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:title="@string/pref_title_macro3name" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_macro3"
            android:inputType="textCapWords"
            android:key="@string/pref_key_macro3"
            android:maxLines="5"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:title="@string/pref_title_macro3" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_general"
        >

        <EditTextPreference
            android:defaultValue="@string/pref_default_backgroundtimeoutsecs"
            android:inputType="number"
            android:key="@string/pref_key_backgroundtimeoutsecs"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:title="@string/pref_title_backgroundtimeoutsecs" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_backgroundratesecs"
            android:inputType="number"
            android:key="@string/pref_key_backgroundratesecs"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:title="@string/pref_title_backgroundratesecs" />

    </PreferenceCategory>

</PreferenceScreen>
