<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="@string/pref_key_debug_mode"
        android:title="@string/pref_title_debug"
        android:summary="@string/pref_summary_debug"
        android:defaultValue="@bool/pref_default_debug"
        />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_debug_device_server"
        android:inputType="textCapWords"
        android:key="@string/pref_key_debug_device_server"
        android:summary="@string/pref_summary_debug_device_server"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_debug_device_server"
        />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_debug_openhome_name"
        android:key="@string/pref_key_debug_openhome_name"
        android:summary="@string/pref_summary_debug_openhome_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_debug_openhome_name" />

</PreferenceScreen>
