<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/info_fragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    >
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/artist_label"
            style="@style/InfoLabel"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/infoArtist"
            style="@style/InfoContent"
            android:onClick="buttonClick"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/album_label"
            style="@style/InfoLabel"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/infoAlbum"
            style="@style/InfoContent"
            android:onClick="buttonClick"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/track_label"
            style="@style/InfoLabel"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/infoTrack"
            style="@style/InfoContent"
            android:onClick="buttonClick"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/format_label"
            style="@style/InfoLabel"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/infoFormat"
            style="@style/InfoLabel"
            android:onClick="buttonClick"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/lyrics_label"
            style="@style/InfoLabel"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/infoLyrics"
            android:text="@string/search_for_lyrics"
            style="@style/InfoContent"
            android:onClick="buttonClick"
            />
    </TableRow>

    <Button
        android:id="@+id/infoDone"
        android:layout_height="@dimen/av_button_size_standard"
        android:layout_margin="@dimen/av_button_margin_standard"
        android:text="@string/info_done"
        />

</TableLayout>

